<resources>
    <string name="app_name">MIWLibrary</string>

    <!-- Errors -->
    <string name="error_only_letters">Only letters and spaces are allowed</string>
    <string name="error_email_invalid">Invalid email</string>
    <string name="error_empty_field">Empty field</string>
    <string name="error_passwords_different">Passwords must be the same.</string>
    <string name="error_password_length">Password must be at least 8 characters.</string>
    <string name="error_generic">An error has occurred, please try again.</string>

    <!-- Common -->
    <string name="common_name">Name</string>
    <string name="common_surname">Surname</string>
    <string name="common_email">Email</string>
    <string name="common_password">Password</string>
    <string name="common_repeat_password">Repeat password</string>
    <string name="common_changePassword">Change password</string>
    <string name="common_loading">Loading...</string>
    <string name="common_yes">Yes</string>
    <string name="common_no_results">No results</string>

    <!-- LoginActivity -->
    <string name="login_btn_login">Login</string>
    <string name="login_text_register_sign_up">Sign up</string>
    <string name="login_error_alert_title">Login error</string>
    <string name="login_error_alert_message">Wrong credentials.</string>
    <string name="login_show_password">Show password</string>

    <!-- RegisterActivity -->
    <string name="register_toolbar">Register</string>
    <string name="register_btn_register">Sign in</string>
    <string name="register_user_exist_alert_title">Register error</string>
    <string name="register_user_exist_alert_message">User already exists.</string>
    <string name="register_user_register_correctly_message">Registered user successfully.</string>

    <!-- NavigationActivity -->
    <string name="navigation_library_option">Library</string>
    <string name="navigation_favorites_option">Favorites</string>
    <string name="navigation_myProfile_option">My profile</string>
    <string name="navigation_sign_out">Sign out</string>
    <string name="navigation_sign_out_alert_message">Do you really want to sign out?</string>
    <string name="navigation_close_drawer">Close</string>
    <string name="navigation_open_drawer">Open</string>

    <!-- LibraryFragment -->
    <string name="library_filter_title_author">Filter by title or author</string>
    <string name="library_filter_categories">Filter by category</string>

    <!-- BookActivity -->
    <string name="book_toolbar">Book information</string>
    <string name="book_image_content_description">Book cover</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="book_language">Language</string>
    <string name="book_content">Content</string>
    <string name="book_summary">Summary</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_publication_year">Year of publication</string>
    <string name="book_details_url">More information</string>
    <string name="book_categories">Categories</string>
    <string name="book_btn_add_favorites">Add to favorites</string>
    <string name="book_btn_delete_favorites">Delete from favorites</string>
    <string name="book_delete_favorite_alert_message">Book successfully deleted from favorites.</string>
    <string name="book_save_favorite_alert_message">Book successfully added to favorites.</string>

    <!-- ProfileFragment -->
    <string name="profile_btn_password">Change password</string>
    <string name="profile_error_alert_title">Load user error</string>
    <string name="profile_error_alert_message">An error occurred while loading user data. Please try again.</string>

    <!-- ChangePasswordFragment -->
    <string name="change_password_old_password">Old password</string>
    <string name="change_password_new_password">New password</string>
    <string name="change_password_new_password_repeat">Repeat new password</string>
    <string name="change_password_toolbar">Change password</string>
    <string name="change_password_error_old_password">Old wrong password</string>
    <string name="change_password_error_alert_title">Change password error</string>
    <string name="change_password_error_alert_message">An error occurred while changing password. Please try again.</string>
    <string name="change_password_alert_message">Password has been successfully changed.</string>

</resources>
