<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profile_name"
            style="@style/TextViewLabelStyle"
            android:text="@string/common_name" />

        <TextView
            android:id="@+id/profile_name_value"
            style="@style/TextViewInfoStyle" />

        <TextView
            android:id="@+id/profile_surname"
            style="@style/TextViewLabelStyle"
            android:text="@string/common_surname" />

        <TextView
            android:id="@+id/profile_surname_value"
            style="@style/TextViewInfoStyle"/>

        <TextView
            android:id="@+id/profile_email"
            style="@style/TextViewLabelStyle"
            android:text="@string/common_email" />

        <TextView
            android:id="@+id/profile_email_value"
            style="@style/TextViewInfoStyle"/>

        <Button
            android:id="@+id/profile_btn_password"
            style="@style/ButtonStyle"
            android:text="@string/profile_btn_password" />

    </LinearLayout>

</ScrollView>