<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.ChangePasswordActivity"
    android:focusableInTouchMode="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/change_password_toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/change_password_toolbar"
        app:titleTextColor="@color/colorText"
        app:navigationIcon="@drawable/ic_arrow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/change_password_old"
                style="@style/TextViewLabelStyle"
                android:text="@string/change_password_old_password" />

            <EditText
                android:id="@+id/change_password_old_value"
                style="@style/EditTextStyle"
                android:hint="@string/change_password_old_password"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/change_password_new"
                style="@style/TextViewLabelStyle"
                android:text="@string/change_password_new_password" />

            <EditText
                android:id="@+id/change_password_new_value"
                style="@style/EditTextStyle"
                android:hint="@string/change_password_new_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/change_password_new_repeat"
                style="@style/TextViewLabelStyle"
                android:text="@string/change_password_new_password_repeat" />

            <EditText
                android:id="@+id/change_password_new_repeat_value"
                style="@style/EditTextStyle"
                android:hint="@string/change_password_new_password_repeat"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/change_password_btn_password"
                style="@style/ButtonStyle"
                android:text="@string/common_changePassword" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>